
    Multisite:
    * Speed-O-Meter: now measure only service checks. Host checks
      are omitted, since they do not really matter and make the
      results less useful when using CMC.
    * FIX: Fixed encoding problem in webservice column output
    * FIX: Fix output format python for several numeric columns
    * FIX: Fixed searching hosts by aliases/adresses

    Checks & Agents:
    * diskstat: removed (ever incorrect) latency computation for Linux
    * statgrab_load: support predictive levels, add perf-o-meter
    * ucd_cpu_load: support predictive levels
    * hpux_cpu, blade_bx_load: support predictive levels, add perf-o-meter,
       make WATO-configable
    * check_sql: Database port can now be explicitly set
    * FIX: esx_vsphere_counters: added missing ramdisk type upgradescratch
    * FIX: esx_vsphere_hostsystem: fixed bug in handling of params
    * steelhead_perrs: New check for Rivergate Gateways
    * alcatel_power: Check for power supplies on Alcatel switches
    * qnap_disks: New check for Hardisks in Qnap devices

    WATO:
    * You can now have site-specific global settings when using
      distributed WATO (available in the "Distributed Monitoring")
    * bulk inventory: display percentage in progress bar
    * New option for full SNMP scan in bulk inventory
    * FIX: correct display of number of hosts in bulk inventory

1.2.3i4:
    Core:
    * Create inventory check also for hosts without services, if they
          have *no* ping tag.

    WATO:
    * Bulk inventory: speed up by use of cache files and doing stuff in
          groups of e.g. 10 hosts at once
    * Multisite connection: new button for cloning a connection

    Checks & Agents:
    * Linux agent RPM: remove dependency to package "time". That package
         is just needed for the binary mk-job, which is useful but not
         neccessary.

    Multisite:
    * FIX: fix broken single-site setups due to new caching

1.2.3i3:
    Core: