@@ -19,6 +19,9 @@
     * FIX: Fix output format python for several numeric columns
     * FIX: Fixed searching hosts by aliases/adresses
 
+    Notifications:
+    * Blacklisting for services in the felixble notification system
+
     Checks & Agents:
     * diskstat: removed (ever incorrect) latency computation for Linux
     * statgrab_load: support predictive levels, add perf-o-meter
